[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Self encrypting files (convergent encryption plus obfuscation)"
documentation = "https://docs.rs/self_encryption"
edition = "2018"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "self_encryption"
readme = "README.md"
repository = "https://github.com/maidsafe/self_encryption"
version = "0.30.0"

[dependencies]

[dev-dependencies]
criterion = "~0.3"
docopt = "~0.9.0"

[dev-dependencies.tokio]
version = "1.34.0"
features = ["rt-multi-thread", "macros"]

[[example]]
bench = false
name = "basic_encryptor"

[[bench]]
name = "lib"
harness = false
